--- a/addFriends.html
+++ b/addFriends.html
@@ -6,11 +6,12 @@
     <!--IMPORT JS-->
     <script type="text/javascript" src="/js/cookie.js"></script>
     <script type="text/javascript" src="/js/github_request.js"></script>
-    <script type="text/javascript" src="/js/page/index.js"></script>
+    <script type="text/javascript" src="/js/page/addFriends.js"></script>
     <script type="text/javascript" src="/js/login.js"></script>
     <!--IMPORT CSS-->
     <link href="/css/topbox.css" rel="stylesheet" type="text/css">
     <link href="/css/copyright.css" rel="stylesheet" type="text/css">
+    <link href="/css/page/addFriends.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div id=topbox><span style="font-size:2em;color:white;position:absolute;left:0px;" onclick=javascript:location.href='/';>ChatOnline</span><span style="font-size:1.5em;color:white;position:absolute;right:0px"> <span id=username>您尚未登录</span> | <span id=account_operation_button>登录 注册 退出登录</span></div>
