--- a/myFriends.html
+++ b/myFriends.html
@@ -6,8 +6,8 @@
     <!--IMPORT JS-->
     <script type="text/javascript" src="/js/cookie.js"></script>
     <script type="text/javascript" src="/js/github_request.js"></script>
-    <script type="text/javascript" src="/js/page/index.js"></script>
     <script type="text/javascript" src="/js/login.js"></script>
+    <script type="text/javascript" src="/js/page/myFriends.js"></script>
     <!--IMPORT CSS-->
     <link href="/css/topbox.css" rel="stylesheet" type="text/css">
     <link href="/css/copyright.css" rel="stylesheet" type="text/css">
