--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <script type="text/javascript" src="/js/page/index.js"></script>
     <script type="text/javascript" src="/js/login.js"></script>
     <script type="text/javascript" src="/js/exec.js"></script>
+    <script type="text/javascript" src="/js/utf.js"></script>
     <!--IMPORT FRAME JS-->
     <script type="text/javascript" src="/js/page/profile.js"></script>
+    <script type="text/javascript" src="/js/page/joinHub.js"></script>
     <!--IMPORT CSS-->
     <link href="/css/topbox.css" rel="stylesheet" type="text/css">
     <link href="/css/copyright.css" rel="stylesheet" type="text/css">
