--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,7 @@
     出生日期 <input id=profile-birthday type=date class=topbox_operation_button style='width:140px'><br>
     登录记录 <span id=profile-login-records></span>
     <button id=upload_button onclick=javascript:ProfileFunc.update(); class=topbox_operation_button style='width:120px'>保存</button>
+    <span id=upload_status></span>
 
    <!-- <div id=CopyrightInFrame>Copyright:(c)2018-2021 Air-Studio (c)2021 ChatOnline</div>-->
     </center>
